--- a/login/src/main/webapp/WEB-INF/web.xml
+++ b/login/src/main/webapp/WEB-INF/web.xml
@@ -5,6 +5,7 @@
     <welcome-file>index.html</welcome-file>
     <welcome-file>index.jsp</welcome-file>
     <welcome-file>index.htm</welcome-file>
+    <welcome-file>redirect.jsp</welcome-file>
     <welcome-file>default.html</welcome-file>
     <welcome-file>default.jsp</welcome-file>
     <welcome-file>default.htm</welcome-file>
@@ -16,7 +17,17 @@
     <servlet-class>com.login.login</servlet-class>
   </servlet>
   <servlet-mapping>
-    <servlet-name>login</servlet-name>   
+    <servlet-name>login</servlet-name>
     <url-pattern>/login</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>AccountController</display-name>
+    <servlet-name>AccountController</servlet-name>
+    <servlet-class>crawlBuild.AccountController</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>AccountController</servlet-name>
+    <url-pattern>/AccountController</url-pattern>
   </servlet-mapping>
 </web-app>
